# qimba

./: .gitignore  Dockerfile  LICENSE  README.md  biom.tsv  filt.sh  pyproject.toml  qimba.pl
.github/workflows/: test.yml
ScriptHelper/lib/: QimbaHelper.pm  ScriptHelper.pm
data/: mapping.tsv  sample_metadata.tsv
data/docs/: mapping.md
lib/Proch/: N50.pm
lib/x86_64-linux-thread-multi/.meta/Archive-Zip-1.64/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/FASTX-Reader-0.60/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/IPC-RunExternal-0.101/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/Module-Build-0.4229/: install.json
lib/x86_64-linux-thread-multi/.meta/Proch-N50-0.20/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/SUPER-1.20190531/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/Sub-Identify-0.14/: install.json
lib/x86_64-linux-thread-multi/.meta/Test-MockModule-v0.170.0/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/Test-Warnings-0.026/: install.json
lib/x86_64-linux-thread-multi/.meta/Text-ASCIITable-0.22/: MYMETA.json  install.json
lib/x86_64-linux-thread-multi/.meta/Text-CSV-2.00/: MYMETA.json  install.json
qimba/: cli.py  config.py  core.py  formats.py  utils.py
qimba/commands/: __init__.py  check_tab.py  dada2_split.py  derep.py  make_mapping.py  merge.py  show_samples.py  version.py
scrapbook/: base.pl  exec.pl  find.pl  merge.sh  q2_import_dir.sh  qib16s.pl  qimba_requirements.pl  usearch_process_uniques.sh  zipper.pl
(+25 files in other folders)
