[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qimba"
version = "0.1.0"
description = "Bioinformatics toolkit for sequence analysis"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "configparser",
    "pyfastx>=2.0.2",
    "numpy>=1.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
qimba = "qimba.cli:main"

[tool.setuptools]
packages = ["qimba", "qimba.commands"]
